fixed layout issues with popup window

--- a/src/css/weave.css
+++ b/src/css/weave.css
@@ -317,31 +317,6 @@ div.table-row-selected>div>div>div>div>div {
 	padding: 8px;
 }
 
-.weave-footer {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	padding: 4px;
-	cursor: default;
-	font-weight: 300;
-}
-
-.weave-footer .ui.button {
-	margin-right: 8px;
-}
-
-.weave-window-footer {
-	border-top: 1px solid;
-	border-top-color: #E6E6E6;
-	padding: 4px;
-}
-
-.weave-window-footer .ui.button {
-	margin-right: 8px;
-	padding:12px;
-	border-radius:2px;
-}
-
 /* tabs */
 .weave-tab-container {
 	border-left: 1px solid #ddd;
